# rm_eng

./: README.md
bag/: first_pose.sh  second_pose.sh
bag/first_pose/: metadata.yaml  rosbag2_2025_02_23-10_25_52_0.db3
bag/pose1/: metadata.yaml  rosbag2_2025_02_19-14_28_54_0.db3
bag/pose2/: metadata.yaml  rosbag2_2025_02_19-14_29_09_0.db3
bag/result/: metadata.yaml  rosbag2_2025_02_23-11_24_45_0.db3
bag/rosbag2_2025_02_18-17_52_48/: metadata.yaml  rosbag2_2025_02_18-17_52_48_0.db3
bag/rosbag2_2025_02_18-18_59_34/: metadata.yaml  rosbag2_2025_02_18-18_59_34_0.db3
bag/rosbag2_2025_02_18-18_59_58/: metadata.yaml  rosbag2_2025_02_18-18_59_58_0.db3
bag/rosbag2_2025_02_19-14_26_44/: metadata.yaml  rosbag2_2025_02_19-14_26_44_0.db3
bag/rosbag2_2025_02_19-14_29_40/: metadata.yaml
bag/rosbag2_2025_02_23-10_18_20/: metadata.yaml
bag/rosbag2_2025_02_23-11_13_42/: metadata.yaml  rosbag2_2025_02_23-11_13_42_0.db3
bag/second_pose/: metadata.yaml  rosbag2_2025_02_23-10_29_53_0.db3
src/arm_control_test/: CMakeLists.txt  package.xml
src/arm_control_test/include/arm_control_test/: arm_control_test.hpp
src/arm_control_test/launch/: arm_control_test.launch.py
src/arm_control_test/src/: arm_control_test.cpp
src/d435i_test/: package.xml  setup.cfg  setup.py
src/d435i_test/d435i_test/: d435i_test.py
src/front_sign_detector/: CMakeLists.txt  package.xml
src/front_sign_detector/config/: camera.yaml
src/front_sign_detector/include/front_sign_detector/: front_sign_detector.hpp
src/front_sign_detector/launch/: front_sign_detector.launch.py
src/front_sign_detector/src/: front_sign_detector.cpp
src/global_launch/: CMakeLists.txt  package.xml
src/global_launch/launch/: global.launch.py
src/goal_joint_state_publisher/: CMakeLists.txt  package.xml
src/goal_joint_state_publisher/include/goal_joint_state_publisher/: goal_joint_state_publisher.hpp
src/goal_joint_state_publisher/src/: goal_joint_state_publisher.cpp
src/goal_state_publisher/: CMakeLists.txt  package.xml
src/goal_state_publisher/include/goal_state_publisher/: goal_state_publisher.hpp
src/goal_state_publisher/launch/: goal_state_publisher.launch.py
src/goal_state_publisher/src/: goal_state_publisher.cpp
src/mine_detector/: CMakeLists.txt  package.xml  pre_process.py  test.py
src/mine_detector/include/mine_detector/: mine_detector.hpp
src/mine_detector/launch/: mine_detector.launch.py
src/mine_detector/src/: mine_detector.cpp
src/mine_detector_python/: package.xml  setup.cfg  setup.py
src/mine_detector_python/mine_detector_python/: mine_detector.py
src/msg_interfaces/: CMakeLists.txt  package.xml
src/msg_interfaces/msg/: SlotState.msg
src/planning_test/: CMakeLists.txt  package.xml
src/planning_test/src/: planning_test.cpp
src/rm_arm_moveit_config/: .setup_assistant  CMakeLists.txt
src/rm_arm_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  rm_arm_description.ros2_control.xacro  rm_arm_description.srdf  rm_arm_description.urdf.xacro
src/rm_arm_moveit_config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/rm_arm_moveit_config/install/rm_arm_moveit_config/share/rm_arm_moveit_config/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/rm_arm_moveit_config/launch/: demo.launch.py  my_moveit_rviz.launch.py  rm_eng.launch.py  rsp.launch.py  spawn_controllers.launch.py
src/rm_arm_moveit_config/log/: latest_build
src/rm_eng_action_server/: CMakeLists.txt  package.xml
src/rm_eng_action_server/include/rm_eng_action_server/: rm_eng_action_server.hpp
src/rm_eng_action_server/launch/: rm_eng_action_server.launch.py
src/rm_eng_action_server/src/: rm_eng_action_server.cpp
src/rm_eng_auto_control/: CMakeLists.txt  package.xml
src/rm_eng_auto_control/include/rm_eng_auto_control/: rm_eng_auto_control.hpp  slot.hpp
src/rm_eng_auto_control/launch/: rm_eng_auto_control.launch.py
src/rm_eng_auto_control/src/: rm_eng_auto_control.cpp  slot.cpp
src/robotic_arm/: CMakeLists.txt
src/robotic_arm/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/robotic_arm/install/robotic_arm/share/robotic_arm/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/robotic_arm/log/: latest_build
src/robotic_arm/meshes/: base_link.STL  mine_link.STL  pitch_link_1.STL  pitch_link_3.STL  roll_link_1.STL  roll_link_2.STL  roll_pitch_1.STL
src/robotic_arm/urdf/: robotic_arm.csv  robotic_arm.urdf
src/robotic_arm2_moveit_config/: CMakeLists.txt
src/robotic_arm2_moveit_config/config/: joint_limits.yaml  robotic_arm.srdf
src/robotic_arm2_moveit_config/install/: local_setup.sh  setup.bash  setup.sh
src/robotic_arm2_moveit_config/install/robotic_arm2_moveit_config/share/robotic_arm2_moveit_config/: package.sh  (+7 more)
src/robotic_arm2_moveit_config/launch/: moveit_rviz.launch.py  my_moveit_rviz.launch.py  rsp.launch.py  static_virtual_joint_tfs.launch.py
src/robotic_arm2_moveit_config/log/: latest_build
src/robotic_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/robotic_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  robotic_arm.ros2_control.xacro  robotic_arm.srdf  ros2_controllers.yaml
src/robotic_arm_moveit_config/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/robotic_arm_moveit_config/log/: latest_build
src/serial_port/: CMakeLists.txt  package.xml
src/serial_port/include/serial_port/: RMEngJointState.hpp  SerialPort.hpp
src/serial_port/launch/: serial_port.launch.py
src/serial_port/src/: SerialPort.cpp
src/side_sign_detector/: CMakeLists.txt  package.xml
src/side_sign_detector/config/: camera.yaml
src/side_sign_detector/include/side_sign_detector/: side_sign_detector.hpp
src/side_sign_detector/launch/: side_sign_detector.launch.py
src/side_sign_detector/src/: side_sign_detector.cpp
src/t265_pose_publisher/: package.xml  setup.cfg  setup.py
src/t265_pose_publisher/t265_pose_publisher/: t265_pose_publisher.py
(+44 files in other folders)
